# mapcolor

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mapcolor/: __init__.py  __main__.py  app.py  errors.py  graph.py  models.py  sat.py  solver.py  svg_map.py
tests/: test_cli.py  test_sat.py  test_svg_map.py
